Project level files

--- a/gradle-scripts/dependencies.gradle
+++ b/gradle-scripts/dependencies.gradle
@@ -31,7 +31,7 @@ ext {
             design           : buildDependency(supportPackage, 'design', supportVersion),
             recyclerView     : buildDependency(supportPackage, 'recyclerview-v7', supportVersion),
             cardView         : buildDependency(supportPackage, 'cardview-v7', supportVersion),
-            appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion)
+            appCompat        : buildDependency(supportPackage, 'appcompat-v7', supportVersion),
     ]
 
     retrofitDependencies = [
